# calendar-edge-lab

./: .gitignore  LICENSE  README.md  pyproject.toml
src/calendar_edge/: __init__.py  cli.py  config.py  validation.py
src/calendar_edge/app/: __init__.py  streamlit_app.py
src/calendar_edge/app/ui/: __init__.py  components.py
src/calendar_edge/db/: __init__.py  connect.py  repo.py  schema.sql
src/calendar_edge/features/: __init__.py  calendar_keys.py  returns.py  trading_calendar.py
src/calendar_edge/ingest/: __init__.py  providers.py  yfinance_provider.py
src/calendar_edge/report/: __init__.py  export.py  markdown.py
src/calendar_edge/scan/: __init__.py  cdoy.py  fdr.py  scoring.py  stats.py  tdom.py  walk_forward.py
tests/: __init__.py  test_calendar_keys.py  test_fdr.py  test_home_page.py  test_returns.py  test_scans.py  test_signal_formatters.py  test_trading_calendar.py  test_walk_forward.py
tests/fixtures/: mini_prices.csv
